fix execution of the tests
